--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,10 @@ Imports:
     attempt,
     DT,
     glue,
-    htmltools
+    htmltools,
+    magrittr,
+    dplyr,
+    tidyr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
