--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,9 @@ Imports:
     htmltools,
     magrittr,
     dplyr,
-    tidyr
+    tidyr,
+    plyr,
+    tibble
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
