--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,9 @@ Imports:
     dplyr,
     tidyr,
     plyr,
-    tibble
+    tibble,
+    shinydashboard,
+    shinydashboardPlus
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
